# acos

./: .env.example  .gitignore  .python-version  AGENTS.md  Makefile  README.md  job.fresh.yaml  job.habit-tracker-smoke.yaml  job.smoke.yaml  job.split-smoke-retry.yaml  job.split-smoke-smallctx.yaml  job.split-smoke.yaml  job.split-test-only.yaml  job.todo-smoke.yaml  job.yaml  job.yaml.example  pyproject.toml
.acos/: habit-smoke-continue-001.json  habit-smoke-final.json
.codex/: config.toml.example
acos/: __init__.py
apps/: __init__.py  cli.py
config/: codex.toml  secret_key
configs/: agents.yaml  model_providers.yaml  model_routing.yaml  policies.yaml  runtime.yaml  worker.yaml
docs/: ACOS_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  DAEMON_MODE.md  MODEL_ROUTING.md  QUICKSTART.md  RUNTIME_RECOVERY.md  SECURITY.md  WINDOWS_ACOS_HOST.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
launchd/: com.tachibanashunta.acos-api.plist  com.tachibanashunta.acos-frontend.plist
mcp_servers/: __init__.py
scripts/: install_launch_agents.sh  start_api_service.sh  start_frontend_service.sh  uninstall_launch_agents.sh
tests/: __init__.py  conftest.py  fakes.py  test_acos_vertical_slice.py  test_agent_prompts.py  test_agent_runner.py  test_api.py  test_approval_api.py  test_approval_gateway.py  test_approval_policy.py  test_autonomy_governor.py  test_cli.py  test_cli_approvals.py  test_cli_daemon.py  test_context_builder.py  test_durable_recovery_runtime.py  test_execution_contracts.py  test_failure_diagnosis.py  test_imports.py  (+27 more)
(+53 files in other folders)
